undo field conflict tests